<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/x_view_small_margin">

        <TextView
            android:id="@id/song_name"
            style="@style/MusicText"
            android:textColor="@color/deepText"
            android:textSize="16sp"
            tools:text="M.anifest - Don't Follow Me" />

        <TextView
            android:id="@id/artist_name"
            style="@style/MusicText"
            android:textColor="@color/lightText"
            android:textSize="15sp"
            tools:text="M.anifest" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/x_view_small_margin"
            android:layout_marginTop="@dimen/view_small_margin"
            android:baselineAligned="false"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/song_total_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/view_small_margin"
                android:layout_marginRight="@dimen/view_small_margin"
                android:drawableLeft="@drawable/ic_play_arrow_info"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_play_arrow_info"
                android:gravity="center"
                android:text="@string/total_plays" />


            <TextView
                android:id="@+id/song_total_likes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/view_small_margin"
                android:layout_marginRight="@dimen/view_small_margin"
                android:drawableLeft="@drawable/ic_favorite"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_favorite"
                android:gravity="center"
                android:text="@string/total_likes" />


            <TextView
                android:id="@+id/song_total_shares"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/view_small_margin"
                android:layout_marginRight="@dimen/view_small_margin"
                android:drawableLeft="@drawable/ic_share"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_share"
                android:gravity="center"
                android:text="@string/total_shares" />


        </LinearLayout>

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/lightText" />


    <TextView
        android:id="@+id/song_total_comments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_mode_comment"
        android:drawablePadding="@dimen/x_view_small_margin"
        android:drawableStart="@drawable/ic_mode_comment"
        android:gravity="center"
        android:paddingBottom="@dimen/x_view_small_margin"
        android:paddingLeft="@dimen/view_small_margin"
        android:paddingRight="@dimen/view_small_margin"
        android:paddingTop="@dimen/x_view_small_margin"
        android:text="@string/total_comments"
        android:textColor="@color/colorPrimary" />


    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/lightText" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/view_small_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.5"
            android:text="@string/dummy_licence_text"
            android:textColor="@color/deepText" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:lineSpacingMultiplier="1.5"
            android:text="@string/copyright"
            android:textColor="@color/deepText" />

    </LinearLayout>


</LinearLayout>