<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.SongDetailActivity">

    <!--Music Image View-->
    <ImageView
        android:id="@+id/music_preview_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/photo_by_chris_dunne"
        android:orientation="vertical"
        android:scaleType="centerCrop"
        android:src="@drawable/daytime_fashion_human_1373085" />

    <!--Music Play buttons and info-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/x_view_small_margin">

        <TextView
            android:id="@id/song_name"
            style="@style/MusicText"
            android:textColor="@color/deepText"
            android:textSize="16sp"
            tools:text="M.anifest - Don't Follow Me" />

        <TextView
            android:id="@id/artist_name"
            style="@style/MusicText"
            android:textColor="@color/lightText"
            android:textSize="15sp"
            tools:text="M.anifest" />

        <SeekBar
            android:id="@+id/seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:max="200"
            android:progress="50" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/x_view_small_margin"
            android:layout_marginTop="@dimen/x_view_small_margin"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:id="@+id/song_initial_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_song_initial_count" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/play_next_button"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="start"
                        android:contentDescription="@string/music_play_button"
                        android:src="@drawable/music_play_previous_button" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/view_medium_margin"
                    android:layout_marginRight="@dimen/view_medium_margin">

                    <ImageView
                        android:id="@+id/play_button"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/music_play_button"
                        android:src="@drawable/music_playing_button" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/play_previous_button"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="end"
                        android:contentDescription="@string/music_play_button"
                        android:src="@drawable/music_play_next_button" />
                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:id="@+id/song_end_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_song_end_count" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>


</LinearLayout>